Fixed navbar links width in collapse mode

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -100,3 +100,9 @@ nav img.brand-logo {
 .nav-up {
   top: -81px;
 }
+
+@media (max-width: 992px) {
+  .side-nav li a {
+    width: 90%;
+  }
+}
